components/checklist.css
.container{
  display: inline-flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.checklist__custom input {
  display: none;
}

.checklist__custom {
  position: relative;
  cursor: pointer;
}

.checklist__custom .checklist__checkmark {
  display: inline-flex;
  width: 24px;
  height: 24px;
  background-color: #f6e58d;
  border: 2px solid #f0932b;
  border-radius: 6px;
  margin-right: 2px;
}

.checklist__custom input:checked + .checklist__checkmark:after {
  content: " ";
  position: absolute;
  height: 5px;
  width: 10px;
  border-left: 2px solid #f0932b;
  border-bottom: 2px solid #f0932b;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(-45deg);
}

.checklist__to-do-item{
  margin: 2px;
  padding: 2px;
  width: 235px;
  font-family: 'Crete Round', serif;
  font-size: 18px;
  color: #f0932b;
  background-color: #f6e58d;
  box-sizing: border-box;
  border: 2px solid #f0932b;
  border-radius: 8px;
  position: relative;
  outline: none;
}
@media (min-width: 600px) {
.checklist__custom .checklist__checkmark {
  width: 40px;
  height: 40px;
  border-radius: 10px;
  margin-right: 0px;
}

.checklist__to-do-item{
  margin: 10px;
  padding: 10px;
  width: 500px;
  font-size: 22px;
  border-radius: 15px;
}
}

